# SpaceWar

./: CMakeLists.txt  Game.hpp  Level.h  README.md  Ship.hpp  main.cpp
Features/: GameOver.hpp  HighScore.hpp  HowTo.hpp  Menu.hpp
Monster/: MinusHealth.h  Monster.hpp
Weapon/: GiantLazer.h  Lazer1.hpp  Missile.hpp  Shield.h  Weapon.hpp
